# internal/infrastructure/dtos/responses/swagger.go
@@ -79,3 +79,4 @@ type SuccessNoContentResponse struct {
 }
 
 type CustomerRegisterResponseWrapper SuccessCreatedResponse[CustomerResponse]
+type CustomerListResponseWrapper SuccessOKResponse[[]CustomerResponse]
