# internal/infrastructure/http/handlers/customer.go
@@ -1,8 +1,6 @@
 package handlers
 
 import (
-	"strconv"
-
 	"github.com/gofiber/fiber/v2"
 
 	"github.com/bagasunix/gosnix/internal/domain/service"
@@ -49,30 +47,33 @@ func (ac *CustomerHandler) Create(ctx *fiber.Ctx) error {
 	return ctx.Status(response.Code).JSON(response)
 }
 
-func (c *CustomerHandler) ViewCustomer(ctx *fiber.Ctx) error {
-	request := new(requests.EntityId)
-	var response responses.BaseResponse[*responses.CustomerResponse]
-	panic(1)
+// GetAllCustomer godoc
+// @Summary Mendapatkan daftar customer
+// @Description Menampilkan daftar customer dengan pagination dan optional search
+// @Tags Customer
+// @Accept  json
+// @Produce  json
+// @Param   page   query string false "Page number"
+// @Param   limit  query string false "Limit per page"
+// @Param   search query string false "Search by name/email"
+// @Success 200 {object} responses.CustomerListResponseWrapper
+// @Failure 400 {object} responses.ErrorBadRequestResponse
+// @Failure 401 {object} responses.ErrorUnauthorizedResponse
+// @Router /customers [get]
+// @Security BearerAuth
+func (c *CustomerHandler) GetAllCustomer(ctx *fiber.Ctx) error {
+	request := new(requests.BaseRequest)
+	var response responses.BaseResponse[[]responses.CustomerResponse]
 
-	id := ctx.Params("id")
-	if id == "" {
+	if err := ctx.QueryParser(request); err != nil {
 		response.Code = fiber.StatusBadRequest
 		response.Message = "Invalid request"
-		response.Errors = "ID tidak ditemukan"
+		response.Errors = err.Error()
 		return ctx.Status(fiber.StatusBadRequest).JSON(response)
 	}
-	if _, err := strconv.Atoi(id); err != nil {
-		response.Code = fiber.StatusBadRequest
-		response.Message = "Invalid request"
-		response.Errors = "ID harus berupa angka"
-		return ctx.Status(response.Code).JSON(response)
-	}
-
-	request.Id = id
-	response = c.service.ViewCustomer(ctx.Context(), request)
+	response = c.service.ListCustomer(ctx.Context(), request)
 	if response.Errors != "" {
 		return ctx.Status(response.Code).JSON(response)
 	}
-
 	return ctx.Status(response.Code).JSON(response)
 }
